# MediaIngredientMech

./: .env.example  .gitignore  CHEMICAL_PROPERTIES_IMPLEMENTATION.md  CULTUREMECH_INCOMPLETE_FORMULAS_ISSUE.md  CURATION_100_PERCENT_COMPLETE.md  CURATION_PRIORITY_LIST.md  FINAL_QUALITY_REPORT_20260316.md  FINAL_STATUS_REPORT.md  FORMULA_REPAIR_ANALYSIS.yaml  FORMULA_REPAIR_FINAL_RECOMMENDATIONS.md  GITHUB_PAGES_SETUP.md  HIERARCHY_IMPLEMENTATION_STATUS.md  HTML_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  MAPPING_SEMANTICS.md  MERGE_COMPLETE_2026-03-15.md  MERGE_TRACKING_IMPLEMENTATION.md  NEXT_TASKS.md  README.md  ROLE_IMPLEMENTATION_SUMMARY.md  TASK_PROCESSING_GUIDE.md  UNIFIED_INGREDIENT_MAPPING.tsv  VALIDATION_REPORT.md  WATER_CURATION_SUMMARY.md  justfile  pyproject.toml
ATTIC/: COMPLEX_MEDIA_TOOLS.md  CULTUREMECH_MERGE_COMPLETE_20260317.md  CURATION_SESSION_COMPLETE.md  HIERARCHY_IMPLEMENTATION_COMPLETE.md  HIERARCHY_IMPLEMENTATION_PLAN.md  INCOMPLETE_OTHER_CATEGORIES_COMPLETE.md  INTEGRATION_COMPLETE.md  MERGE_ANALYSIS_SUMMARY.md  POST_MERGE_ACTIVITIES_COMPLETE.md  PURITY_VALIDATION_IMPLEMENTATION.md  README.md  REVIEW_INGREDIENTS_IMPLEMENTATION_COMPLETE.md  ROLE_CURATION_IMPLEMENTATION.md  ROLE_INTEGRATION_STATUS.md  TASKS_COMPLETE_20260316.md  WATER_CURATION_COMPLETE.md
analysis/: bad_merge_examples.md  complex_media_report.md  duplicates_and_variants.yaml  good_merge_examples.md  merge_pattern_analysis.md  merge_pattern_analysis.yaml
conf/: discussions_config.yaml  id_label_targets.yaml  kgscan_config.yaml  qc_config.yaml
dashboard/: index.html
docs/: Boolean.md  CLAUDE_CODE_CURATION.md  CURATION_GUIDE.md  CURIE_STANDARD.md  CellularMetabolicRoleAssignment.md  CellularMetabolicRoleEnum.md  CellularRoleAssignment.md  CellularRoleEnum.md  ChemicalProperties.md  CitationTypeEnum.md  CommunityOrganismRoleAssignment.md  CommunityOrganismRoleEnum.md  CurationActionEnum.md  CurationEvent.md  Curie.md  Dataset.md  DatasetRepositoryEnum.md  DatasetTypeEnum.md  Date.md  DateOrDatetime.md  Datetime.md  Decimal.md  Discussion.md  DiscussionKindEnum.md  DiscussionStatusEnum.md  Double.md  EnvironmentContext.md  EnvironmentRelevanceEnum.md  EvidenceSupportEnum.md  EvidenceTypeEnum.md  Float.md  HIERARCHY_GUIDE.md  ID_LABEL_CORRESPONDENCE.md  IngredientCollection.md  IngredientRecord.md  IngredientRoleEnum.md  IngredientSynonym.md  IngredientTypeEnum.md  Integer.md  Jsonpath.md  (+169 more)
mappings/: chemical_mappings.sssom.tsv  complex_ingredients.tsv  ingredient_mappings.sssom.tsv  ingredient_mappings_external_prefix_ols_validation.md  ingredient_mappings_external_prefix_ols_validation.tsv  ingredient_mappings_oak_ols_review.md  ingredient_mappings_oak_ols_review.tsv  ingredient_mappings_row_review_manifest.tsv  ingredient_mappings_synonym_enrich_review.tsv  ingredient_mappings_unknown_term_manual_candidate_review.tsv  ingredient_mappings_unknown_term_nohit_review.tsv  ingredient_mappings_unknown_term_placeholder_ols_candidates.tsv  ingredient_mappings_unknown_term_triage.md  ingredient_mappings_unknown_term_triage.tsv  ingredient_mappings_unknown_term_triage_summary.md  mim_curie_aliases.tsv  needs_curator_review.tsv  unmapped_ingredients_curation_actions.md  unmapped_ingredients_duplicate_review_2026-05-07.md  unmapped_ingredients_ols_exact_audit.md  unmapped_ingredients_ols_exact_audit.tsv
notes/: CLAUDE_CODE_QUICK_START.md  IMPLEMENTATION_SUMMARY.md  INDIVIDUAL_RECORDS.md  KG-MICROBE-INTEGRATION-SUMMARY.md  LLM_CURATION_IMPLEMENTATION.md  README.md  SYNONYM_FEATURE_SUMMARY.md  SYNONYM_PRESERVATION_EXAMPLE.md  audit_2026-06-08_occstats_kgx_unmapped.md  batch10_placeholder.md  batch1_simple_chemicals.md  batch1_suggestions.yaml  batch2_simple_chemicals.md  batch2_suggestions.yaml  batch3_simple_chemicals.md  batch3_suggestions.yaml  batch4_environmental.md  batch4_suggestions.yaml  batch5_suggestions.yaml  batch5_unknown.md  batch6_suggestions.yaml  batch6_unknown.md  batch7_complex_mixture.md  batch7_suggestions.yaml  batch8_complex_mixture.md  batch8_suggestions.yaml  batch9_final.yaml  batch9_incomplete.md  duplicate_identifiers_analysis_2026-05-29.md  ingredient_mapping_review_2026-05-05.md  match_level_implementation_report.md  schema_gap_analysis_2026-05-16.md  schema_gap_analysis_2026-05-23.md  unmapped_analysis.md  unmapped_standardization_goal_prompt_2026-05-07.md
references_cache/: README.md
scripts/: .validate_id_label_correspondence.sha256  .vendored_canon_ref  _edison_capture.py  _engine_a_obo_safe.sh  add_ids_to_mapped.py  add_match_level.py  add_mediaingredientmech_ids.py  aggregate_records.py  analyze_batch1.py  analyze_culturemech_roles.py  analyze_duplicates_and_variants.py  analyze_merge_patterns.py  analyze_unmapped.py  apply_claude_suggestions.py  apply_corrections.py  apply_insession_role_curation.py  apply_role_research_results.py  apply_synonym_review.py  audit_occurrence_stats.py  audit_role_plausibility.py  audit_writers.py  auto_correct.py  backfill_ontology_labels.py  batch_curate.py  batch_curate_unmapped.py  batch_review.py  browser_export.py  build_curie_alias_map.py  build_water_hierarchy.py  categorize_unmapped.py  check_vendored_sync.sh  chem_formula.py  classify_solution_types.py  compare_with_culturemech.py  correct_stale_ontology_labels.py  cross_reference_culturemech.py  curate_unmapped.py  deduplicate_ingredients.py  download_ontologies.py  drop_implausible_roles.py  (+60 more)
templates/: ingredient_mapping_research.md  ingredient_role_research.md
tests/: test_apply_role_research_results.py  test_chemical_properties.py  test_chemical_properties_client.py  test_curation_workflow.py  test_curie_normalizer.py  test_engine_a_obo_safe.py  test_enum_sync.py  test_environmental_context.py  test_export_preserves_discussions.py  test_id_label_empty_adapter.py  test_id_label_exceptions.py  test_id_label_exceptions_conf.py  test_id_label_plausibility.py  test_id_label_unknown_prefix.py  test_occurrence_stats.py  test_ontology_label_correction.py  test_ontology_lookup.py  test_reconcile_sssom.py  test_research_ingredient.py  test_research_ingredient_roles.py  (+7 more)
(+3377 files in other folders)
