[project]
name = "mediaingredientmech"
version = "0.1.0"
description = "LLM-assisted curation system for media ingredient ontology mappings"
authors = [
    {name = "MediaIngredientMech Contributors"}
]
readme = "README.md"
license = {text = "CC0-1.0"}
requires-python = ">=3.10"
keywords = [
    "microbiology",
    "growth media",
    "ontology mapping",
    "curation",
    "knowledge graph",
    "linkml"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "linkml>=1.7.0,<1.10",
    # Pinned <1.10: linkml 1.9.x imports `Format.JSON` at module load,
    # and linkml-runtime 1.10 dropped that enum value, breaking
    # `linkml-validate` startup with `AttributeError: Format has no attribute 'JSON'`.
    # Lift this cap when bumping linkml past 1.9.x.
    "linkml-runtime>=1.7.0,<1.10",
    "oaklib>=0.5.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    # Used directly by chemical_properties_client, doi_resolver,
    # ingredient_reviewer, and the OLS4 backfill/download scripts.
    # Was previously pulled in transitively (e.g. via oaklib); make the
    # dependency explicit so a fresh `pip install .` doesn't break.
    "requests>=2.28.0",
    # Used by scripts/generate_ingredient_umap.py to project KG-Microbe
    # ingredient embeddings into 2D for the docs/ingredient_umap.html viewer.
    "umap-learn>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "deep-research-client[cyberian]>=0.2.4; python_version >= '3.12'",
    # Used by scripts/research_ingredient_edison.py — drives the Edison
    # Scientific SDK directly (PaperQA is not a registered DRC provider).
    "edison-client>=0.11.0; python_version >= '3.12'",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/CultureBotAI/MediaIngredientMech"
Repository = "https://github.com/CultureBotAI/MediaIngredientMech"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mediaingredientmech = ["schema/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "--strict-markers",
    "--cov=mediaingredientmech",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
